# magikbook-api

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  COCKPIT.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  PRODUCTION_CHECKLIST.md  PROJECT.md  README.md  SETUP_GUIDE.md  SPOTLIGHT.md  STATE.md  fix_nginx.sh  magikbook.db  pyproject.toml  requirements.txt  smoke_tests.py  verify_db.py  verify_files.py  verify_migration.py  vk_integration_report.md
.github/workflows/: ci.yml
docs/: DIAGNOSTIC_CONTENT_MODERATION.md  INCIDENT_DB_RECOVERY_2026-04-10.md  INCIDENT_GIT_TRACKED_SQLITE_2026-04-11.md
migrations/: env.py  recreate_saved_like_tables.py
migrations/versions/: 20260323114351_add_is_admin_to_user.py  20260323114449_add_result_and_affiliate_fields_to_prompt.py  20260409153000_add_email_otps_table.py  20260410120000_add_vk_video_embed_fields.py  3001716b9785_add_uniqueconstraint_to_likes.py  40f2527aa2fc_add_indexes_to_prompts_table.py  a91996c936d6_init_with_prompt_fields.py  c75ac982ce2a_add_moderation_status_and_other_fields.py
scripts/: README.md  backfill_vk_video_embed.py  backup_magikbook_db.sh  check_category_sync.py  import_temp_data.py  upgrade_db.sh  verify_feed_curl.sh
src/: category_labels.py  config.py  database.py  dependencies.py  import_temp_data.py  main.py  redis_client.py  seed_db.py  seed_text_prompts.py
src/magikbook_api.egg-info/: SOURCES.txt  requires.txt
tests/: conftest.py  test_artist_glory_portfolio.py  test_auth_register.py  test_battle.py  test_generate.py  test_prompts.py  test_security.py
(+25 files in other folders)
