[project]
name = "magikbook-api"
version = "0.1.0"
description = "Backend for MagikBook"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "sqlmodel>=0.0.19",
    "google-genai>=1.0.0",
    "redis>=5.0.4",
    "arq>=0.25.0",
    "pydantic-settings>=2.3.1",
    "email-validator>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "sse-starlette>=2.1.0",
    "alembic>=1.13.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "Pillow>=11.0.0",
    "aiosmtplib>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "anyio[asyncio]>=4.0"
]
